--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                                         <hr>
                                         <p><span class="bold">Mobilité :</span> Reims - Hauts de France - Île de France</p>
                                         <hr>
-                                        <p><span class="bold">Contact :</span> tantely.tnr@gmail.com
+                                        <p><span class="bold">Contact :</span> mdt.randria@gmail.com
                                         </p>
                                         <a target="_blank" class="lien-linkedin" href="https://www.linkedin.com/in/maya-diane-r-555b99172/"><img class="logos-modal" src="photos/logo_linkedin.png" width="30" height="30" alt="Compte Linkedin de Maya Diane Randria"></a>
                                         <a target="_blank" class="lien-github" href="https://github.com/Ttl-10"><img class="logos-modal" src="photos/logo_github.png" width="30" height="30" alt="Compte Github de Maya Diane Randria"></a>
